[metadata]
name = maestral
version = 1.6.0.dev3
author = Sam Schott
author_email = sam.schott@outlook.com
license = MIT
description = Open-source Dropbox client for macOS and Linux.
url = https://maestral.app
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
package_dir =
    = src
zip_safe = False
setup_requires = build
install_requires =
    click>=8.0.2
    desktop-notifier>=3.3.0
    dropbox>=11.28.0,<12.0
    fasteners>=0.15
    importlib_metadata;python_version<'3.8'
    keyring>=22
    keyrings.alt>=3.1.0
    packaging
    pathspec>=0.5.8
    Pyro5>=5.10
    requests>=2.16.2
    rubicon-objc>=0.4.1;sys_platform=='darwin'
    sdnotify>=0.3.2
    setuptools
    survey>=3.4.3,<4.0
    watchdog>=2.0.1
python_requires = >=3.7

[options.packages.find]
where = src

[options.package_data]
maestral =
    resources/*
    py.typed

[options.data_files]
share/icons/hicolor/512x512/apps =
	src/maestral/resources/maestral.png

[options.entry_points]
console_scripts = maestral=maestral.cli:main
pyinstaller40 =
    hook-dirs=maestral.__pyinstaller:get_hook_dirs

[options.extras_require]
gui =
    maestral-qt>=1.5.3;sys_platform=='linux'
    maestral-cocoa>=1.5.3;sys_platform=='darwin'
syslog = systemd-python
dev =
    black
    bump2version
    flake8
    mypy
    pre-commit
    pytest
    pytest-benchmark
    pytest-cov
    pytest-rerunfailures
    types-pkg_resources
    types-requests
docs =
    sphinx
    sphinxext-opengraph
    m2r2
    sphinx-autoapi
    sphinx_rtd_theme

[flake8]
ignore = E203,E501,W503,H306
statistics = True

[mypy]
files = src, tests
python_version = 3.7
warn_redundant_casts = True
ignore_missing_imports = True
